<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".Main" >

        <TextView
            android:id="@+id/tx_olaGuJavaSc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:text="@string/ola_gujavasc"
            android:textSize="26sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_parametro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_parametro" />

        <Button
            android:id="@+id/bt_entradaTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_entradaTexto" />

        <Button
            android:id="@+id/bt_abrirBrowser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_abrirBrowser" />

        <Button
            android:id="@+id/bt_simularChamada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_simularChamada" />

        <Button
            android:id="@+id/bt_frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_frameLayout" />

        <Button
            android:id="@+id/bt_linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_linearLayout" />

        <Button
            android:id="@+id/bt_relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_relativeLayout" />

        <Button
            android:id="@+id/bt_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_listView" />

        <Button
            android:id="@+id/bt_gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tx_gridView" />
    </LinearLayout>

</ScrollView>